syntax = "proto3";

package device;

service DeviceService {
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse);
  rpc GetManyDevices(GetManyDevicesRequest) returns (GetManyDevicesResponse); // User
  rpc GetManyDevicesAdmin(GetManyDevicesRequest) returns (GetManyDevicesAdminResponse); // Admin
  rpc CreateDevice(CreateDeviceRequest) returns (GetDeviceResponse);
  rpc UpdateDevice(UpdateDeviceRequest) returns (GetDeviceResponse);
  rpc DeleteDevice(DeleteDeviceRequest) returns (DeleteDeviceResponse);
}

// GetDevice
message GetDeviceRequest {
  string deviceId = 1;
}

message GetDeviceResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string status = 5;
  int32 quantity = 6;
  repeated string information = 7;
  repeated string images = 8;
  string categoryId = 9;
  string categoryName = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

// GetManyDevices (User)
message GetManyDevicesRequest {
  int32 page = 1;
  int32 limit = 2;
  string status = 3;
  string search = 4;
  string categoryId = 5;
}

message GetManyDevices {
  string name = 1;
  double price = 2;
  string description = 3;
  string status = 4;
  int32 quantity = 5;
  repeated string information = 6;
  repeated string images = 7;
  string categoryName = 8;
}

message GetManyDevicesResponse {
  repeated GetManyDevices devices = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 totalItems = 4;
  int32 totalPages = 5;
}

// GetManyDevicesAdmin (Admin)
message GetManyDevicesAdmin {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string status = 5;
  int32 quantity = 6;
  repeated string information = 7;
  repeated string images = 8;
  string categoryId = 9;
  string categoryName = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

message GetManyDevicesAdminResponse {
  repeated GetManyDevicesAdmin devices = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 totalItems = 4;
  int32 totalPages = 5;
}

// CreateDevice
message CreateDeviceRequest {
  string name = 1;
  double price = 2;
  string description = 3;
  string status = 4;
  int32 quantity = 5;
  repeated string information = 6;
  repeated string images = 7;
  string categoryId = 8;
}

// UpdateDevice
message UpdateDeviceRequest {
  string deviceId = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string status = 5;
  int32 quantity = 6;
  repeated string information = 7;
  repeated string images = 8;
  string categoryId = 9;
}

// DeleteDevice
message DeleteDeviceRequest {
  string deviceId = 1;
}

message DeleteDeviceResponse {
  string message = 1;
}
