syntax = "proto3";

package user;

service UserService {
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (GetUserProfileResponse);
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
  OTHER = 3;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  USER = 1;
  ADMIN = 2;
  SUPER_ADMIN = 3;
}

// GetUserProfile
message GetUserProfileRequest {
  string userId = 1;
}

message GetUserProfileResponse {
  string id = 1;
  string email = 2;
  string fullName = 3;
  string phone = 4;
  string role = 5;
  optional Gender gender = 6;
  optional string avatarUrl = 7;
  optional string facebookUrl = 8;
  optional string bio = 9;
  optional string birthDate = 10;
  int32 creditScore = 11;
  string createdAt = 12;
  string updatedAt = 13;
}

// UpdateUserProfile
message UpdateUserProfileRequest {
  string userId = 1;
  optional string fullName = 2;
  optional string phone = 3;
  optional string avatarUrl = 4;
  optional string facebookUrl = 5;
  optional string bio = 6;
  optional string birthDate = 7;
  optional Gender gender = 8;
}